--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+debug = ["winnow/debug"]
+
 [dependencies]
 clap = { version = "4.4.7", features = ["derive"] }
 color-eyre = "0.6.2"
@@ -12,5 +15,9 @@ directories = "5.0.1"
 glob = "0.3.1"
 serde = { version = "1.0.190", features = ["derive"] }
 serde_json = "1.0.108"
-shellexpand = { version = "3.1.0", default-features = false, features = ["tilde", "full"] }
+shellexpand = { version = "3.1.0", default-features = false, features = [
+    "tilde",
+    "full",
+] }
 skim = "0.10.4"
+winnow = "0.5"
