--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 debug = ["winnow/debug"]
 
 [dependencies]
-clap = { version = "4.4.7", features = ["derive"] }
+clap = { version = "4.5.0", features = ["derive"] }
 color-eyre = "0.6.2"
 directories = "5.0.1"
 glob = "0.3.1"
@@ -19,5 +19,7 @@ shellexpand = { version = "3.1.0", default-features = false, features = [
     "tilde",
     "full",
 ] }
+winnow = "0.6.1"
+
+# TODO: replace skim somehow
 skim = "0.10.4"
-winnow = "0.5"
